--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "dependencies": {
     "normalize.css": "^5.0.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-ink": "^5.1.1"
+    "react-dom": "^15.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
