--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "s3cmd put ./build/* s3://jacobmortensen.com/ && s3cmd --recursive modify --add-header=\"Cache-Control:public, max-age=31536000\" s3://jacobmortensen.com/static/"
   },
   "eslintConfig": {
     "extends": "react-app"
